--- a/src/styles/Stack/Stack.module.scss
+++ b/src/styles/Stack/Stack.module.scss
@@ -3,3 +3,19 @@
 .stack {
   margin-top: 20px;
 }
+
+.itembox1 {
+  background: linear-gradient(87deg, #f5365c 0, #f56036 100%);
+  border-radius: 6px;
+  overflow: hidden;
+  text-align: right;
+  padding: 200px 100px;
+}
+
+.itembox2 {
+  background: linear-gradient(87deg, #2dce89 0, #2dcecc 100%);
+}
+
+.itembox3 {
+  background: linear-gradient(87deg, #11cdef 0, #1171ef 100%);
+}
