--- a/src/styles/LayoutHome/LayoutHome.module.scss
+++ b/src/styles/LayoutHome/LayoutHome.module.scss
@@ -22,3 +22,12 @@
 .bgbox2 {
   background-image: url(/assets/images/uv.svg);
 }
+
+.logo {
+  background-image: url(/assets/images/admin.svg);
+  background-size: cover;
+  background-repeat: none;
+  background-color: $stackcolor;
+  width: 188px;
+  height: 50px;
+}
