--- a/src/styles/StackArray/StackArray.module.scss
+++ b/src/styles/StackArray/StackArray.module.scss
@@ -4,4 +4,7 @@
   display: flex;
   place-items: center;
   gap: 10px;
+  box-shadow: none !important;
+  border-radius: 8px !important;
+  cursor: pointer;
 }
