--- a/src/styles/StackVertical/StackVertical.module.scss
+++ b/src/styles/StackVertical/StackVertical.module.scss
@@ -3,6 +3,9 @@
 .stackvertical {
   display: flex;
   place-items: center;
-  gap: 10px;
+  gap: 30px;
   flex-direction: column;
+  margin-right: 50px;
+  border-radius: 8px !important;
+  box-shadow: none !important;
 }
