--- a/src/styles/TableData/TableData.module.scss
+++ b/src/styles/TableData/TableData.module.scss
@@ -1,1 +1,10 @@
 @import '../_global.scss';
+
+.header {
+  padding-top: 10px;
+  color: grey;
+  font-family: 'Roboto', sans-serif;
+  font-size: 14;
+  font-weight: 400;
+  line-height: 1, 43;
+}
