--- a/src/styles/LayoutHome/LayoutHome.module.scss
+++ b/src/styles/LayoutHome/LayoutHome.module.scss
@@ -26,10 +26,10 @@
 }
 
 .logo {
-  background-image: url(/assets/images/admin.svg);
+  background-image: url(/assets/images/adminlogo.png);
   background-size: cover;
   background-repeat: none;
-  background-color: $stackcolor;
-  width: 188px;
+  background-color: inherit;
+  width: 160px;
   height: 50px;
 }
