--- a/src/styles/LayoutHome/LayoutHome.module.scss
+++ b/src/styles/LayoutHome/LayoutHome.module.scss
@@ -29,7 +29,16 @@
   background-image: url(/assets/images/adminlogo.png);
   background-size: cover;
   background-repeat: none;
-  background-color: inherit;
+  background-color: transparent;
   width: 160px;
   height: 50px;
+}
+
+.copyright {
+  background-color: transparent !important;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
 }
